@@ -17,7 +17,7 @@ DynamicForms.configure do |config|
   # configures the field types that are available to be used in the dynamic forms
   # this is dependent on the FormField models
   # by default you should not have to change these values unless you add a custom field type
-  # config.field_types = %w{text_field text_area select check_box check_box_group file_field}
+  # config.field_types = %w{text_field text_area select check_box check_box_group file_field radio_button_select}
   
   # configures the validation types that are available to be used on form fields
   # by default you should not have to change these values unless you add a custom validation type
