@@ -1,0 +1,3 @@
+class FormField::RadioButtonSelect < FormField
+  include DynamicForms::Models::FieldTypes::RadioButtonSelect
+end
