@@ -13,4 +13,5 @@ require 'dynamic_forms/models/field_types/select'
 require 'dynamic_forms/models/field_types/text_area'
 require 'dynamic_forms/models/field_types/text_field'
 require 'dynamic_forms/models/field_types/file_field'
+require 'dynamic_forms/models/field_types/radio_button_select'
 require 'dynamic_forms/models/dynamic_forms_mailer'
